# Fcon

./: .gitignore  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json
cli/: .gitignore  CMakeLists.txt  README.md
cli/src/: FileSystemScanner.cpp  FileSystemScanner.h  ProgressBar.cpp  ProgressBar.h  main.cpp
docs/: README.md  architecture.md  development.md  features.md  installation.md  usage.md
example/: example_filesystem.json
src/: App.vue  main.js
src/components/guide/: GuideModule.vue
src/components/layout/: DataPanel.vue  DirectoryTree.vue  OperationPanel.vue  SimpleDirectoryTree.vue  ThreeDVisualization.vue  TreeItem.vue
src/components/terminal/: TerminalWindow.vue
src/core/: AlgorithmModule.js  FileSystemCore.js
src/data/: DataCollector.js  DataPersistence.js  DataProcessor.js
src/interaction/: EventHandler.js  OperationPanel.js
src/renderer/: ChartRenderer.js  ThreeDRenderer.js
src/stores/: fileSystem.js  performance.js
src/style/: index.css
src/types/: index.js
src/utils/: colorGenerator.js  commandParser.js  constants.js
